--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <!-- custom CSS -->
-  <link rel="stylesheet" href="./reset.css">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +30,7 @@
   <!-- Font Awesome (CDN) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
-  <title>Jammming</title>
+  <title>Jammming | Spotify Playlist Manager</title>
 </head>
 
 <body>
